derive/tests/samples/parse_errors.stderr
error: expected attribute arguments in parentheses: `rkvc(...)`
 --> tests/samples/parse_errors.rs:4:3
  |
4 | #[rkvc]
  |   ^^^^

error: Unknown attribute name
  --> tests/samples/parse_errors.rs:10:8
   |
10 | #[rkvc(foo = "bar")]
   |        ^^^

error: expected string literal
  --> tests/samples/parse_errors.rs:16:21
   |
16 | #[rkvc(crate_path = rkvc)]
   |                     ^^^^
